# renesas_ek4m3_cmake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  config.cmake  setup_repo.sh
firmware/ek-ra4m3/: CMakeLists.txt  README.md  build.sh  build_bsp.sh  buildinfo.json  configuration.xml  fsp_config.sh
firmware/ek-ra4m3/inc/: FreeRTOSConfig.h  pin_data.c
firmware/ek-ra4m3/inc/fsp_cfg/bsp/: bsp_mcu_family_cfg.h
firmware/ek-ra4m3/src/: main.c
toolchain/: ek-ra4m3-gcc-arm-none-eabi.cmake  gcc-arm-none-eabi-ra4m3.cmake
